# govee-lan

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
govee_lan/: __init__.py  cli.py  controller.py  device.py  protocol.py  scanner.py  scenes.py  transport.py
tests/: conftest.py  test_cli.py  test_controller.py  test_device.py  test_protocol.py  test_scanner.py
tests_integration/: test_live.py
