[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "govee-lan"
version = "1.2.0"
description = "Discover and control Govee lights over the local network via the Govee LAN API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
keywords = ["govee", "lan", "iot", "smart-home", "lights"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Home Automation",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.8"]

[project.scripts]
govee = "govee_lan.cli:main"

[tool.setuptools.packages.find]
include = ["govee_lan*"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
